@@ -95,12 +95,15 @@ evsignal_cb(int fd, short what, void *arg)
 void
 evsignal_init(struct event_base *base)
 {
+	int i;
+
 	/* 
 	 * Our signal handler is going to write to one end of the socket
 	 * pair to wake up our event loop.  The event loop then scans for
 	 * signals that got delivered.
 	 */
-	if (evutil_socketpair(AF_UNIX, SOCK_STREAM, 0, base->sig.ev_signal_pair) == -1)
+	if (evutil_socketpair(
+		    AF_UNIX, SOCK_STREAM, 0, base->sig.ev_signal_pair) == -1)
 		event_err(1, "%s: socketpair", __func__);
 
 	FD_CLOSEONEXEC(base->sig.ev_signal_pair[0]);
@@ -109,6 +112,9 @@ evsignal_init(struct event_base *base)
 	base->sig.sh_old_max = 0;
 	base->sig.evsignal_caught = 0;
 	memset(&base->sig.evsigcaught, 0, sizeof(sig_atomic_t)*NSIG);
+	/* initialize the queues for all events */
+	for (i = 0; i < NSIG; ++i)
+		TAILQ_INIT(&base->sig.evsigevents[i]);
 
         evutil_make_socket_nonblocking(base->sig.ev_signal_pair[0]);
 
@@ -189,18 +195,25 @@ evsignal_add(struct event *ev)
 	if (ev->ev_events & (EV_READ|EV_WRITE))
 		event_errx(1, "%s: EV_SIGNAL incompatible use", __func__);
 	evsignal = EVENT_SIGNAL(ev);
+	assert(evsignal >= 0 & evsignal < NSIG);
+	if (TAILQ_EMPTY(&sig->evsigevents[evsignal])) {
+		event_debug(("%s: %p: changing signal handler", __func__, ev));
+		if (_evsignal_set_handler(
+			    base, evsignal, evsignal_handler) == -1)
+			return (-1);
 
-	event_debug(("%s: %p: changing signal handler", __func__, ev));
-	if (_evsignal_set_handler(base, evsignal, evsignal_handler) == -1)
-		return (-1);
+		/* catch signals if they happen quickly */
+		evsignal_base = base;
 
-	/* catch signals if they happen quickly */
-	evsignal_base = base;
-
-	if (!sig->ev_signal_added) {
-		sig->ev_signal_added = 1;
-		event_add(&sig->ev_signal, NULL);
+		if (!sig->ev_signal_added) {
+			if (event_add(&sig->ev_signal, NULL))
+				return (-1);
+			sig->ev_signal_added = 1;
+		}
 	}
+
+	/* multiple events may listen to the same signal */
+	TAILQ_INSERT_TAIL(&sig->evsigevents[evsignal], ev, ev_signal_next);
 
 	return (0);
 }
@@ -238,8 +251,21 @@ _evsignal_restore_handler(struct event_base *base, int evsignal)
 int
 evsignal_del(struct event *ev)
 {
+	struct event_base *base = ev->ev_base;
+	struct evsignal_info *sig = &base->sig;
+	int evsignal = EVENT_SIGNAL(ev);
+
+	assert(evsignal >= 0 & evsignal < NSIG);
+
+	/* multiple events may listen to the same signal */
+	TAILQ_REMOVE(&sig->evsigevents[evsignal], ev, ev_signal_next);
+
+	if (!TAILQ_EMPTY(&sig->evsigevents[evsignal]))
+		return (0);
+
 	event_debug(("%s: %p: restoring signal handler", __func__, ev));
-	return _evsignal_restore_handler(ev->ev_base, EVENT_SIGNAL(ev));
+
+	return (_evsignal_restore_handler(ev->ev_base, EVENT_SIGNAL(ev)));
 }
 
 static void
@@ -247,7 +273,7 @@ evsignal_handler(int sig)
 {
 	int save_errno = errno;
 
-	if(evsignal_base == NULL) {
+	if (evsignal_base == NULL) {
 		event_warn(
 			"%s: received signal %d, but have no base configured",
 			__func__, sig);
@@ -269,29 +295,39 @@ evsignal_handler(int sig)
 void
 evsignal_process(struct event_base *base)
 {
-	struct event *ev;
+	struct evsignal_info *sig = &base->sig;
+	struct event *ev, *next_ev;
 	sig_atomic_t ncalls;
-
+	int i;
+	
 	base->sig.evsignal_caught = 0;
-	TAILQ_FOREACH(ev, &base->sig.signalqueue, ev_signal_next) {
-		ncalls = base->sig.evsigcaught[EVENT_SIGNAL(ev)];
-		if (ncalls) {
+	for (i = 1; i < NSIG; ++i) {
+		ncalls = sig->evsigcaught[i];
+		if (ncalls == 0)
+			continue;
+
+		for (ev = TAILQ_FIRST(&sig->evsigevents[i]);
+		    ev != NULL; ev = next_ev) {
+			next_ev = TAILQ_NEXT(ev, ev_signal_next);
 			if (!(ev->ev_events & EV_PERSIST))
 				event_del(ev);
 			event_active(ev, EV_SIGNAL, ncalls);
-			base->sig.evsigcaught[EVENT_SIGNAL(ev)] = 0;
 		}
+
+		sig->evsigcaught[i] = 0;
 	}
 }
 
 void
 evsignal_dealloc(struct event_base *base)
 {
-	if(base->sig.ev_signal_added) {
+	int i = 0;
+	if (base->sig.ev_signal_added) {
 		event_del(&base->sig.ev_signal);
 		base->sig.ev_signal_added = 0;
 	}
-	assert(TAILQ_EMPTY(&base->sig.signalqueue));
+	for (i = 0; i < NSIG; ++i)
+		assert(TAILQ_EMPTY(&base->sig.evsigevents[0]));
 
 	EVUTIL_CLOSESOCKET(base->sig.ev_signal_pair[0]);
 	base->sig.ev_signal_pair[0] = -1;
